--- a/ui/view.html
+++ b/ui/view.html
@@ -15,7 +15,7 @@
 
 
     <script>
-        window.onload = getItem(1);
+        window.onload = getItem();
         //we need a function to reach out and get data from our API
         async function getItem(id) {
             //this is the equivelant to System.out.println();
